--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <html>
-<body>
-
-</body>
+	<head>
+		<title>GIT 수업</title>
+	</head>
+	<body>
+		<header>
+			<h1>Git</h1>
+		</header>
+		<ul>	
+			
+		</ul>
+	</body>
 </html>
